docs/envoy/v1.15.0/_sources/api-v2/config/filter/http/ext_authz/v2/ext_authz.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/ext_authz/v2/ext_authz.proto:

External Authorization
======================

.. _extension_envoy.filters.http.ext_authz:


This extension may be referenced by the qualified name *envoy.filters.http.ext_authz*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

External Authorization :ref:`configuration overview <config_http_filters_ext_authz>`.

.. _envoy_api_msg_config.filter.http.ext_authz.v2.ExtAuthz:

config.filter.http.ext_authz.v2.ExtAuthz
----------------------------------------

`[config.filter.http.ext_authz.v2.ExtAuthz proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L27>`_


.. code-block:: json

  {
    "grpc_service": "{...}",
    "http_service": "{...}",
    "failure_mode_allow": "...",
    "use_alpha": "...",
    "with_request_body": "{...}",
    "clear_route_cache": "...",
    "status_on_error": "{...}",
    "metadata_context_namespaces": [],
    "filter_enabled": "{...}",
    "deny_at_disable": "{...}",
    "include_peer_certificate": "..."
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.grpc_service:

grpc_service
  (:ref:`core.GrpcService <envoy_api_msg_core.GrpcService>`) gRPC service configuration (default timeout: 200ms).
  
  External authorization service configuration.
  
  
  Only one of :ref:`grpc_service <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.grpc_service>`, :ref:`http_service <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.http_service>` may be set.
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.http_service:

http_service
  (:ref:`config.filter.http.ext_authz.v2.HttpService <envoy_api_msg_config.filter.http.ext_authz.v2.HttpService>`) HTTP service configuration (default timeout: 200ms).
  
  External authorization service configuration.
  
  
  Only one of :ref:`grpc_service <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.grpc_service>`, :ref:`http_service <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.http_service>` may be set.
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.failure_mode_allow:

failure_mode_allow
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_)  Changes filter's behaviour on errors:
  
   1. When set to true, the filter will *accept* client request even if the communication with
   the authorization service has failed, or if the authorization service has returned a HTTP 5xx
   error.
  
   2. When set to false, ext-authz will *reject* client requests and return a *Forbidden*
   response if the communication with the authorization service has failed, or if the
   authorization service has returned a HTTP 5xx error.
  
  Note that errors can be *always* tracked in the :ref:`stats
  <config_http_filters_ext_authz_stats>`.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.use_alpha:

use_alpha
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sets the package version the gRPC service should use. This is particularly
  useful when transitioning from alpha to release versions assuming that both definitions are
  semantically compatible. Deprecation note: This field is deprecated and should only be used for
  version upgrade. See release notes for more details.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.with_request_body:

with_request_body
  (:ref:`config.filter.http.ext_authz.v2.BufferSettings <envoy_api_msg_config.filter.http.ext_authz.v2.BufferSettings>`) Enables filter to buffer the client request body and send it within the authorization request.
  A ``x-envoy-auth-partial-body: false|true`` metadata header will be added to the authorization
  request message indicating if the body data is partial.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.clear_route_cache:

clear_route_cache
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Clears route cache in order to allow the external authorization service to correctly affect
  routing decisions. Filter clears all cached routes when:
  
  1. The field is set to *true*.
  
  2. The status returned from the authorization service is a HTTP 200 or gRPC 0.
  
  3. At least one *authorization response header* is added to the client request, or is used for
  altering another client request header.
  
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.status_on_error:

status_on_error
  (:ref:`type.HttpStatus <envoy_api_msg_type.HttpStatus>`) Sets the HTTP status that is returned to the client when there is a network error between the
  filter and the authorization server. The default status is HTTP 403 Forbidden.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.metadata_context_namespaces:

metadata_context_namespaces
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies a list of metadata namespaces whose values, if present, will be passed to the
  ext_authz service as an opaque *protobuf::Struct*.
  
  For example, if the *jwt_authn* filter is used and :ref:`payload_in_metadata
  <envoy_api_field_config.filter.http.jwt_authn.v2alpha.JwtProvider.payload_in_metadata>` is set,
  then the following will pass the jwt payload to the authorization server.
  
  .. code-block:: yaml
  
     metadata_context_namespaces:
     - envoy.filters.http.jwt_authn
  
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.filter_enabled:

filter_enabled
  (:ref:`core.RuntimeFractionalPercent <envoy_api_msg_core.RuntimeFractionalPercent>`) Specifies if the filter is enabled.
  
  If :ref:`runtime_key <envoy_api_field_core.RuntimeFractionalPercent.runtime_key>` is specified,
  Envoy will lookup the runtime key to get the percentage of requests to filter.
  
  If this field is not specified, the filter will be enabled for all requests.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.deny_at_disable:

deny_at_disable
  (:ref:`core.RuntimeFeatureFlag <envoy_api_msg_core.RuntimeFeatureFlag>`) Specifies whether to deny the requests, when the filter is disabled.
  If :ref:`runtime_key <envoy_api_field_core.RuntimeFeatureFlag.runtime_key>` is specified,
  Envoy will lookup the runtime key to determine whether to deny request for
  filter protected path at filter disabling. If filter is disabled in
  typed_per_filter_config for the path, requests will not be denied.
  
  If this field is not specified, all requests will be allowed when disabled.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.include_peer_certificate:

include_peer_certificate
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Specifies if the peer certificate is sent to the external service.
  
  When this field is true, Envoy will include the peer X.509 certificate, if available, in the
  :ref:`certificate<envoy_api_field_service.auth.v2.AttributeContext.Peer.certificate>`.
  
  


.. _envoy_api_msg_config.filter.http.ext_authz.v2.BufferSettings:

config.filter.http.ext_authz.v2.BufferSettings
----------------------------------------------

`[config.filter.http.ext_authz.v2.BufferSettings proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L117>`_

Configuration for buffering the request data.

.. code-block:: json

  {
    "max_request_bytes": "...",
    "allow_partial_message": "..."
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.BufferSettings.max_request_bytes:

max_request_bytes
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sets the maximum size of a message body that the filter will hold in memory. Envoy will return
  *HTTP 413* and will *not* initiate the authorization process when buffer reaches the number
  set in this field. Note that this setting will have precedence over :ref:`failure_mode_allow
  <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.failure_mode_allow>`.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.BufferSettings.allow_partial_message:

allow_partial_message
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When this field is true, Envoy will buffer the message until *max_request_bytes* is reached.
  The authorization request will be dispatched and no 413 HTTP error will be returned by the
  filter.
  
  


.. _envoy_api_msg_config.filter.http.ext_authz.v2.HttpService:

config.filter.http.ext_authz.v2.HttpService
-------------------------------------------

`[config.filter.http.ext_authz.v2.HttpService proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L155>`_

HttpService is used for raw HTTP communication between the filter and the authorization service.
When configured, the filter will parse the client request and use these attributes to call the
authorization server. Depending on the response, the filter may reject or accept the client
request. Note that in any of these events, metadata can be added, removed or overridden by the
filter:

*On authorization request*, a list of allowed request headers may be supplied. See
:ref:`allowed_headers
<envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationRequest.allowed_headers>`
for details. Additional headers metadata may be added to the authorization request. See
:ref:`headers_to_add
<envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationRequest.headers_to_add>` for
details.

On authorization response status HTTP 200 OK, the filter will allow traffic to the upstream and
additional headers metadata may be added to the original client request. See
:ref:`allowed_upstream_headers
<envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationResponse.allowed_upstream_headers>`
for details.

On other authorization response statuses, the filter will not allow traffic. Additional headers
metadata as well as body may be added to the client's response. See :ref:`allowed_client_headers
<envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationResponse.allowed_client_headers>`
for details.

.. code-block:: json

  {
    "server_uri": "{...}",
    "path_prefix": "...",
    "authorization_request": "{...}",
    "authorization_response": "{...}"
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.HttpService.server_uri:

server_uri
  (:ref:`core.HttpUri <envoy_api_msg_core.HttpUri>`) Sets the HTTP server URI which the authorization requests must be sent to.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.HttpService.path_prefix:

path_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sets a prefix to the value of authorization request header *Path*.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.HttpService.authorization_request:

authorization_request
  (:ref:`config.filter.http.ext_authz.v2.AuthorizationRequest <envoy_api_msg_config.filter.http.ext_authz.v2.AuthorizationRequest>`) Settings used for controlling authorization request metadata.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.HttpService.authorization_response:

authorization_response
  (:ref:`config.filter.http.ext_authz.v2.AuthorizationResponse <envoy_api_msg_config.filter.http.ext_authz.v2.AuthorizationResponse>`) Settings used for controlling authorization response metadata.
  
  


.. _envoy_api_msg_config.filter.http.ext_authz.v2.AuthorizationRequest:

config.filter.http.ext_authz.v2.AuthorizationRequest
----------------------------------------------------

`[config.filter.http.ext_authz.v2.AuthorizationRequest proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L171>`_


.. code-block:: json

  {
    "allowed_headers": "{...}",
    "headers_to_add": []
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationRequest.allowed_headers:

allowed_headers
  (:ref:`type.matcher.ListStringMatcher <envoy_api_msg_type.matcher.ListStringMatcher>`) Authorization request will include the client request headers that have a correspondent match
  in the :ref:`list <envoy_api_msg_type.matcher.ListStringMatcher>`. Note that in addition to the
  user's supplied matchers:
  
  1. *Host*, *Method*, *Path* and *Content-Length* are automatically included to the list.
  
  2. *Content-Length* will be set to 0 and the request to the authorization service will not have
  a message body. However, the authorization request can include the buffered client request body
  (controlled by :ref:`with_request_body
  <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.with_request_body>` setting),
  consequently the value of *Content-Length* of the authorization request reflects the size of
  its payload size.
  
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationRequest.headers_to_add:

headers_to_add
  (:ref:`core.HeaderValue <envoy_api_msg_core.HeaderValue>`) Sets a list of headers that will be included to the request to authorization service. Note that
  client request of the same key will be overridden.
  
  


.. _envoy_api_msg_config.filter.http.ext_authz.v2.AuthorizationResponse:

config.filter.http.ext_authz.v2.AuthorizationResponse
-----------------------------------------------------

`[config.filter.http.ext_authz.v2.AuthorizationResponse proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L192>`_


.. code-block:: json

  {
    "allowed_upstream_headers": "{...}",
    "allowed_client_headers": "{...}"
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationResponse.allowed_upstream_headers:

allowed_upstream_headers
  (:ref:`type.matcher.ListStringMatcher <envoy_api_msg_type.matcher.ListStringMatcher>`) When this :ref:`list <envoy_api_msg_type.matcher.ListStringMatcher>` is set, authorization
  response headers that have a correspondent match will be added to the original client request.
  Note that coexistent headers will be overridden.
  
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.AuthorizationResponse.allowed_client_headers:

allowed_client_headers
  (:ref:`type.matcher.ListStringMatcher <envoy_api_msg_type.matcher.ListStringMatcher>`) When this :ref:`list <envoy_api_msg_type.matcher.ListStringMatcher>`. is set, authorization
  response headers that have a correspondent match will be added to the client's response. Note
  that when this list is *not* set, all the authorization response headers, except *Authority
  (Host)* will be in the response to the client. When a header is included in this list, *Path*,
  *Status*, *Content-Length*, *WWWAuthenticate* and *Location* are automatically added.
  
  


.. _envoy_api_msg_config.filter.http.ext_authz.v2.ExtAuthzPerRoute:

config.filter.http.ext_authz.v2.ExtAuthzPerRoute
------------------------------------------------

`[config.filter.http.ext_authz.v2.ExtAuthzPerRoute proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L207>`_

Extra settings on a per virtualhost/route/weighted-cluster level.

.. code-block:: json

  {
    "disabled": "...",
    "check_settings": "{...}"
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthzPerRoute.disabled:

disabled
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Disable the ext auth filter for this particular vhost or route.
  If disabled is specified in multiple per-filter-configs, the most specific one will be used.
  
  
  
  Precisely one of :ref:`disabled <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthzPerRoute.disabled>`, :ref:`check_settings <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthzPerRoute.check_settings>` must be set.
  
.. _envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthzPerRoute.check_settings:

check_settings
  (:ref:`config.filter.http.ext_authz.v2.CheckSettings <envoy_api_msg_config.filter.http.ext_authz.v2.CheckSettings>`) Check request settings for this route.
  
  
  
  Precisely one of :ref:`disabled <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthzPerRoute.disabled>`, :ref:`check_settings <envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthzPerRoute.check_settings>` must be set.
  


.. _envoy_api_msg_config.filter.http.ext_authz.v2.CheckSettings:

config.filter.http.ext_authz.v2.CheckSettings
---------------------------------------------

`[config.filter.http.ext_authz.v2.CheckSettings proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/filter/http/ext_authz/v2/ext_authz.proto#L225>`_

Extra settings for the check request. You can use this to provide extra context for the
external authorization server on specific virtual hosts \ routes. For example, adding a context
extension on the virtual host level can give the ext-authz server information on what virtual
host is used without needing to parse the host header. If CheckSettings is specified in multiple
per-filter-configs, they will be merged in order, and the result will be used.

.. code-block:: json

  {
    "context_extensions": "{...}"
  }

.. _envoy_api_field_config.filter.http.ext_authz.v2.CheckSettings.context_extensions:

context_extensions
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_>) Context extensions to set on the CheckRequest's
  :ref:`AttributeContext.context_extensions<envoy_api_field_service.auth.v2.AttributeContext.context_extensions>`
  
  Merge semantics for this field are such that keys from more specific configs override.
  
  .. note::
  
    These settings are only applied to a filter configured with a
    :ref:`grpc_service<envoy_api_field_config.filter.http.ext_authz.v2.ExtAuthz.grpc_service>`.
  
  

